# person_struct_parser

./: Cargo.toml  Example.txt  ExampleInputForCLI.txt  Makefile  README.md  Result.txt
src/: grammar.pest  lib.rs  main.rs
tests/: panic_tests.rs  test1.rs  test2.rs  test_normalize.rs  to_file_test.rs
