[package]
name = "person_struct_parser"
version = "1.0.0"
edition = "2021"
description = "Rust parser for person struct  #parser #grammar #person_struct"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "2.33.3"
fmt = "0.1.0"
thiserror = "1.0.50"
