[package]
name = "person_struct_parser"
version = "1.2.6"
edition = "2021"
authors = ["DavydKod"]
description = "Rust parser for person struct"
license = "MIT"
keywords = ["parser","grammar","person_struct","person_parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "2.33.3"
fmt = "0.1.0"
thiserror = "1.0.50"
